--- a/boj/B9465(x)/.project
+++ b/boj/B9465(x)/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>B9465</name>
+	<name>B9465(x)</name>
 	<comment></comment>
 	<projects>
 	</projects>
