--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/boj/B*/.settings
-/boj/B*/.classpath
-/boj/B*/.gitignore
-/boj/B*/.project
+/boj/*/B*/.settings
+/boj/*/B*/.classpath
+/boj/*/B*/.gitignore
+/boj/*/B*/.project
 
